--- a/cubemx/tdc72xvs4-rtos.ioc
+++ b/cubemx/tdc72xvs4-rtos.ioc
@@ -1,4 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
+CORTEX_M7.CPU_ICache=Enabled
+CORTEX_M7.IPParameters=CPU_ICache
 FREERTOS.IPParameters=configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configTOTAL_HEAP_SIZE,configUSE_TRACE_FACILITY,configUSE_STATS_FORMATTING_FUNCTIONS,configGENERATE_RUN_TIME_STATS,Tasks01,configUSE_RECURSIVE_MUTEXES
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
@@ -14,18 +16,18 @@ I2C1.I2C_Rise_Time=25
 I2C1.I2C_Speed_Mode=I2C_Fast
 I2C1.IPParameters=Timing,OwnAddress,I2C_Fall_Time,I2C_Rise_Time,I2C_Speed_Mode
 I2C1.OwnAddress=0x33
-I2C1.Timing=0x00601B5E
+I2C1.Timing=0x0050164E
 I2C2.I2C_Fall_Time=25
 I2C2.I2C_Rise_Time=25
 I2C2.I2C_Speed_Mode=I2C_Fast
 I2C2.IPParameters=Timing,I2C_Speed_Mode,I2C_Rise_Time,I2C_Fall_Time
-I2C2.Timing=0x00601B5E
+I2C2.Timing=0x0050164E
 I2C3.IPParameters=Timing,Timeout
-I2C3.Timeout=0x00008293
-I2C3.Timing=0x20404768
+I2C3.Timeout=0x00008225
+I2C3.Timing=0xC0000E12
 I2C4.I2C_Speed_Mode=I2C_Standard
 I2C4.IPParameters=I2C_Speed_Mode,Timing
-I2C4.Timing=0x20404768
+I2C4.Timing=0xC0000E12
 KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
@@ -570,80 +572,82 @@ ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,4-MX_I2C1_Init-I2C1-false-LL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_I2C3_SMBUS_Init-I2C3-false-HAL-true,7-MX_I2C4_Init-I2C4-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_SPI4_Init-SPI4-false-HAL-true,10-MX_USART2_UART_Init-USART2-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-LL-true,12-MX_GFXSIMULATOR_Init-GFXSIMULATOR-false-HAL-true
-RCC.AHBFreq_Value=216000000
+RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=54000000
-RCC.APB1TimFreq_Value=108000000
+RCC.APB1Freq_Value=45000000
+RCC.APB1TimFreq_Value=90000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=108000000
-RCC.APB2TimFreq_Value=216000000
+RCC.APB2Freq_Value=90000000
+RCC.APB2TimFreq_Value=180000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=216000000
-RCC.DFSDMAudioFreq_Value=192000000
-RCC.DFSDMFreq_Value=108000000
+RCC.CortexFreq_Value=180000000
+RCC.DFSDMAudioFreq_Value=200000000
+RCC.DFSDMFreq_Value=90000000
 RCC.DSIFreq_Value=60000000
 RCC.DSITXEscFreq_Value=15000000
-RCC.EthernetFreq_Value=216000000
-RCC.FCLKCortexFreq_Value=216000000
+RCC.EthernetFreq_Value=180000000
+RCC.FCLKCortexFreq_Value=180000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=216000000
+RCC.HCLKFreq_Value=180000000
 RCC.HSE_VALUE=24000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=54000000
-RCC.I2C2Freq_Value=54000000
-RCC.I2C3Freq_Value=54000000
-RCC.I2C4Freq_Value=54000000
-RCC.I2SFreq_Value=192000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,DSIFreq_Value,DSITXEscFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFTFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLDSIFreq_Value,PLLDSIVCOFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
-RCC.LCDTFTFreq_Value=96000000
-RCC.LPTIM1Freq_Value=54000000
+RCC.I2C1Freq_Value=45000000
+RCC.I2C2Freq_Value=45000000
+RCC.I2C3Freq_Value=45000000
+RCC.I2C4Freq_Value=45000000
+RCC.I2SFreq_Value=200000000
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,DSIFreq_Value,DSITXEscFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFTFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLDSIFreq_Value,PLLDSIVCOFreq_Value,PLLI2SN,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIN,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.LCDTFTFreq_Value=100000000
+RCC.LPTIM1Freq_Value=45000000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=216000000
-RCC.PLLCLKFreq_Value=216000000
+RCC.MCO2PinFreq_Value=180000000
+RCC.PLLCLKFreq_Value=180000000
 RCC.PLLDSIFreq_Value=480000000
 RCC.PLLDSIVCOFreq_Value=960000000
-RCC.PLLI2SPCLKFreq_Value=192000000
-RCC.PLLI2SQCLKFreq_Value=192000000
-RCC.PLLI2SRCLKFreq_Value=192000000
-RCC.PLLI2SRoutputFreq_Value=192000000
+RCC.PLLI2SN=200
+RCC.PLLI2SPCLKFreq_Value=200000000
+RCC.PLLI2SQCLKFreq_Value=200000000
+RCC.PLLI2SRCLKFreq_Value=200000000
+RCC.PLLI2SRoutputFreq_Value=200000000
 RCC.PLLM=12
-RCC.PLLN=216
-RCC.PLLQCLKFreq_Value=216000000
-RCC.PLLQoutputFreq_Value=216000000
-RCC.PLLRFreq_Value=216000000
-RCC.PLLSAIPCLKFreq_Value=192000000
-RCC.PLLSAIQCLKFreq_Value=192000000
-RCC.PLLSAIRCLKFreq_Value=192000000
-RCC.PLLSAIoutputFreq_Value=192000000
+RCC.PLLN=180
+RCC.PLLQCLKFreq_Value=180000000
+RCC.PLLQoutputFreq_Value=180000000
+RCC.PLLRFreq_Value=180000000
+RCC.PLLSAIN=200
+RCC.PLLSAIPCLKFreq_Value=200000000
+RCC.PLLSAIQCLKFreq_Value=200000000
+RCC.PLLSAIRCLKFreq_Value=200000000
+RCC.PLLSAIoutputFreq_Value=200000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.RNGFreq_Value=216000000
-RCC.SAI1Freq_Value=192000000
-RCC.SAI2Freq_Value=192000000
-RCC.SDMMC2Freq_Value=216000000
-RCC.SDMMCFreq_Value=216000000
-RCC.SPDIFRXFreq_Value=192000000
-RCC.SYSCLKFreq_VALUE=216000000
+RCC.RNGFreq_Value=180000000
+RCC.SAI1Freq_Value=200000000
+RCC.SAI2Freq_Value=200000000
+RCC.SDMMC2Freq_Value=180000000
+RCC.SDMMCFreq_Value=180000000
+RCC.SPDIFRXFreq_Value=200000000
+RCC.SYSCLKFreq_VALUE=180000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.UART4Freq_Value=54000000
-RCC.UART5Freq_Value=54000000
-RCC.UART7Freq_Value=54000000
-RCC.UART8Freq_Value=54000000
-RCC.USART1Freq_Value=108000000
-RCC.USART2Freq_Value=54000000
-RCC.USART3Freq_Value=54000000
-RCC.USART6Freq_Value=108000000
-RCC.USBFreq_Value=216000000
-RCC.VCOI2SOutputFreq_Value=384000000
+RCC.UART4Freq_Value=45000000
+RCC.UART5Freq_Value=45000000
+RCC.UART7Freq_Value=45000000
+RCC.UART8Freq_Value=45000000
+RCC.USART1Freq_Value=90000000
+RCC.USART2Freq_Value=45000000
+RCC.USART3Freq_Value=45000000
+RCC.USART6Freq_Value=90000000
+RCC.USBFreq_Value=180000000
+RCC.VCOI2SOutputFreq_Value=400000000
 RCC.VCOInputFreq_Value=2000000
-RCC.VCOOutputFreq_Value=432000000
-RCC.VCOSAIOutputFreq_Value=384000000
+RCC.VCOOutputFreq_Value=360000000
+RCC.VCOSAIOutputFreq_Value=400000000
 SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CLKPolarity=SPI_POLARITY_HIGH
-SPI1.CalculateBaudRate=27.0 MBits/s
+SPI1.CalculateBaudRate=22.5 MBits/s
 SPI1.DataSize=SPI_DATASIZE_16BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPhase,CLKPolarity
@@ -652,7 +656,7 @@ SPI1.VirtualType=VM_MASTER
 SPI4.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI4.CLKPhase=SPI_PHASE_2EDGE
 SPI4.CLKPolarity=SPI_POLARITY_HIGH
-SPI4.CalculateBaudRate=27.0 MBits/s
+SPI4.CalculateBaudRate=22.5 MBits/s
 SPI4.DataSize=SPI_DATASIZE_16BIT
 SPI4.Direction=SPI_DIRECTION_2LINES
 SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPolarity,CLKPhase
