--- a/cubemx/bmc-b1.ioc
+++ b/cubemx/bmc-b1.ioc
@@ -240,53 +240,55 @@ ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-LL-true
-RCC.ADC12outputFreq_Value=64000000
-RCC.ADC34outputFreq_Value=64000000
-RCC.AHBFreq_Value=64000000
+RCC.ADC12outputFreq_Value=72000000
+RCC.ADC34outputFreq_Value=72000000
+RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=32000000
-RCC.APB1TimFreq_Value=64000000
-RCC.APB2Freq_Value=64000000
-RCC.APB2TimFreq_Value=64000000
-RCC.CortexFreq_Value=64000000
-RCC.FCLKCortexFreq_Value=64000000
+RCC.APB1Freq_Value=36000000
+RCC.APB1TimFreq_Value=72000000
+RCC.APB2Freq_Value=72000000
+RCC.APB2TimFreq_Value=72000000
+RCC.CortexFreq_Value=72000000
+RCC.FCLKCortexFreq_Value=72000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=64000000
+RCC.HCLKFreq_Value=72000000
 RCC.HSEPLLFreq_Value=24000000
 RCC.HSE_VALUE=24000000
 RCC.HSIPLLFreq_Value=4000000
 RCC.HSI_VALUE=8000000
 RCC.I2C1Freq_Value=8000000
 RCC.I2C2Freq_Value=8000000
-RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,LSE_VALUE,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,TIM8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,LSE_VALUE,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCClockSelection,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,TIM8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=40000
-RCC.MCOFreq_Value=64000000
-RCC.PLLCLKFreq_Value=64000000
-RCC.PLLMCOFreq_Value=32000000
-RCC.PLLMUL=RCC_PLL_MUL16
-RCC.RTCFreq_Value=40000
+RCC.MCOFreq_Value=72000000
+RCC.PLLCLKFreq_Value=72000000
+RCC.PLLMCOFreq_Value=36000000
+RCC.PLLMUL=RCC_PLL_MUL3
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.RTCClockSelection=RCC_RTCCLKSOURCE_HSE_DIV32
+RCC.RTCFreq_Value=750000
 RCC.RTCHSEDivFreq_Value=750000
-RCC.SYSCLKFreq_VALUE=64000000
+RCC.SYSCLKFreq_VALUE=72000000
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TIM1Freq_Value=64000000
-RCC.TIM2Freq_Value=64000000
-RCC.TIM8Freq_Value=64000000
-RCC.USART1Freq_Value=64000000
-RCC.USART2Freq_Value=32000000
-RCC.USART3Freq_Value=32000000
-RCC.USBFreq_Value=64000000
-RCC.VCOOutput2Freq_Value=4000000
+RCC.TIM1Freq_Value=72000000
+RCC.TIM2Freq_Value=72000000
+RCC.TIM8Freq_Value=72000000
+RCC.USART1Freq_Value=72000000
+RCC.USART2Freq_Value=36000000
+RCC.USART3Freq_Value=36000000
+RCC.USBFreq_Value=72000000
+RCC.VCOOutput2Freq_Value=24000000
 RTC.AsynchPrediv=124
 RTC.Format=RTC_FORMAT_BIN
 RTC.IPParameters=Format,AsynchPrediv,SynchPrediv
-RTC.SynchPrediv=7999
+RTC.SynchPrediv=5999
 SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.CLKPhase=SPI_PHASE_1EDGE
 SPI1.CLKPolarity=SPI_POLARITY_LOW
-SPI1.CalculateBaudRate=16.0 MBits/s
+SPI1.CalculateBaudRate=18.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_1LINE
 SPI1.IPParameters=Mode,BaudRatePrescaler,CalculateBaudRate,CLKPolarity,CLKPhase,DataSize,Direction,VirtualNSS,VirtualType
@@ -296,7 +298,7 @@ SPI1.VirtualType=VM_MASTER
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI2.CLKPhase=SPI_PHASE_2EDGE
 SPI2.CLKPolarity=SPI_POLARITY_HIGH
-SPI2.CalculateBaudRate=16.0 MBits/s
+SPI2.CalculateBaudRate=18.0 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=Direction,DataSize,Mode,CalculateBaudRate,VirtualType,BaudRatePrescaler,TIMode,CLKPolarity,CLKPhase
@@ -306,7 +308,7 @@ SPI2.VirtualType=VM_MASTER
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI3.CLKPhase=SPI_PHASE_2EDGE
 SPI3.CLKPolarity=SPI_POLARITY_HIGH
-SPI3.CalculateBaudRate=16.0 MBits/s
+SPI3.CalculateBaudRate=18.0 MBits/s
 SPI3.DataSize=SPI_DATASIZE_16BIT
 SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=Mode,CalculateBaudRate,BaudRatePrescaler,DataSize,CLKPhase,CLKPolarity,VirtualType,Direction
